--- a/package.json
+++ b/package.json
@@ -17,12 +17,19 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "core-js": "^3.19.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4",
+    "morgan": "^1.10.0",
     "nuxt": "^2.15.8",
+    "validator": "^13.7.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
+    "vuex-persist": "^3.1.3",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
